--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Una Stef</h1>
 
     <div class="social-media">
-        <a href="https://www.youtube.com/user/unastef" target="_blank">
+        <a href="https://www.youtube.com/user/unastef">
            asdasd
         </a>
         <a href="https://www.facebook.com/unastef" target="_blank">
