--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Una Stef</h1>
 
     <div class="social-media">
-        <a href="https://www.youtube.com/user/unastef">
-           asdasd
+        <a href="https://www.youtube.com/user/unastef" target="_blank">
+            <span class="fa fa-youtube"></span>
         </a>
         <a href="https://www.facebook.com/unastef" target="_blank">
             <span class="fa fa-facebook"></span>
