--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </a>
     </div>
 
-    <div id="image-container">
-        <img src="images/una-stef.png" alt="Una Stef" />
+    <div id="image-container" class="transparent">
+        <img src="images/unastef.jpg" alt="Una Stef" />
     </div>
 
 </body>
