--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Una Stef</title>
     <link media="all" rel="stylesheet" href="css/font-awesome.css" />
-    <link media="all" rel="stylesheet" href="css/style.css" />
+    <link media="all" rel="stylesheet" href="css/style-una.css" />
 </head>
 <body>
 
